--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="output.css">
-    <script src="index.js" type="module" defer></script>
+    <script src="index.js" defer></script>
     <title>🛜Pokémon Game</title>
 </head>
 
 <body>
-    <div class="flex justify-center my-10">
-        <div id="pokemon" class="grid grid-cols-4 border-solid border-2 h-96 w-96 ">
+    <h1 class="flex justify-center text-3xl font-bold">Game pokemon</h1>
+    <div class="flex justify-center my-8">
+
+        <div id="pokemon" class="grid grid-cols-4 border-solid border-2 h-96 w-96 cursor-pointer">
         </div>
     </div>
-    <div class="flex justify-center">
+    <div class="flex justify-center ">
 
         <button id="resetBtn"
             class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Reset</button>
