--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 class="flex justify-center text-3xl font-bold">Game pokemon</h1>
     <div class="flex justify-center my-8">
 
-        <div id="pokemon" class="grid grid-cols-6 border-solid border-2 h-96 w-96 cursor-pointer ">
+        <div id="pokemon" class="grid grid-cols-6 border-solid border-2 sm:h-96 sm:w-96 cursor-pointer h-72 w-72">
         </div>
     </div>
     <div class="flex justify-center ">
